# quiz_generator

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  quiz_from_lecture_cli.py  store_lecture.py  worker.py
app/api/: __init__.py  main.py  schemas.py
app/core/: config.py
app/db/: __init__.py  connection.py  models.py
app/db/repositories/: __init__.py  ingestion_job.py  lecture_chunk.py  lecture_quiz.py  lecture_summary_embeddings.py
app/quiz/: __init__.py  generator.py
app/schema/: models.py  quiz_lecture.py
app/services/: __init__.py  chunking.py  embedding.py  extractors.py  ingestion_pipeline.py  lecture_store.py  quiz_from_lecture.py  quiz_validator.py  stt.py  summary.py
db/: init-vector.sql
docs/: RAG_PIPELINE_REPORT.md  VECTOR_SEARCH.md
tests/: conftest.py  test_lecture_pipeline.py
